# finanzas-sri-ecuador

./: .env.example  .replit  .replit.yml  README.md  README_REPLIT.md  app.py  config.py  install.sh  main.py  pip.conf  pyproject.toml  replit.nix  requirements.txt  setup.py
static/css/: style.css
static/js/: app.js
templates/: base.html  budgets.html  daily_report.html  dashboard.html  deudas.html  monthly_report.html  sri_status.html  transactions.html  upload.html
utils/: ocr_processor.py  openai_processor.py  sheets_manager.py  sri_validator.py
