[tool.poetry]
name = "finanzas-sri-ecuador"
version = "1.0.0"
description = "Sistema completo de finanzas personales para deducciones SRI Ecuador"
authors = ["Emilio Arauz <tu-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
Werkzeug = "2.3.7"
google-cloud-vision = "3.4.4"
openai = "1.3.5"
gspread = "5.12.0"
oauth2client = "4.1.3"
Pillow = "10.0.1"
python-dotenv = "1.0.0"
pandas = "2.1.3"
numpy = "1.25.2"
requests = "2.31.0"
pdfplumber = "0.9.0"
flask-cors = "4.0.0"
gunicorn = "21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main" 